<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Quiz App</string>
    <string name="score_text">Your score <xliff:g id="score" example="1">%d</xliff:g></string>
    <string name="question_number_text">Question #<xliff:g id="question" example="1">%d</xliff:g></string>
    <string name="hint_text">Make a choice </string>
    <string name="check_button">Check</string>
    <string name="answer_field">Enter your answer</string>

    */
    * Toast message for correct and incorrect answer
    /*
    <string name="toast_correct_message">Correct!</string>
    <string name="toast_incorrect_message">Incorrect!</string>

    */
    * Question #1. Who was the first president of the USA?
    /*
    <string name="question_number_1">Who was the first president of the USA?</string>
    <string name="abraham_lincoln">Abraham Lincoln</string>
    <string name="george_washington">George Washington</string>
    <string name="thomas_jefferson">Thomas Jefferson</string>

    */
    * Question #2. Select all states that are members of the United States
    /*
    <string name="question_number_2">Select all states that are members of the United States</string>
    <string name="alabama">Alabama</string>
    <string name="new_mexico">New Mexico</string>
    <string name="saint_petersburg">Saint Petersburg</string>
    <string name="ohio">Ohio</string>

    */
    * Question #3. Who is the current president of USA?
    /*
    <string name="question_number_3">Who is the current president of USA?</string>
    <string name="donald_trump">Donald Trump</string>

    */
    * Question #4.Flags description
    /*
    <string name="question_number_4">Select the USA flag</string>
    <string name="united_kingdom">Flag of the United Kingdom</string>
    <string name="malaysia">Flag of Malaysia</string>
    <string name="united_states">Flag of the United States</string>
    <string name="russia">Flag of Russia</string>

    */
    * Final layout
    /*
    <string name="result_text"><xliff:g id="win" example="You win!">%s</xliff:g></string>
    <string name="try_again_button_text">Try again</string>

</resources>
